--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     	<div class="spacer"></div>
     	<div id="output-frame">
     		<div class="row">
-    			<div class="col-sm-3 card">
+    			<div class="col-sm-3 card selected">
     				<h2></h2>
     				<p><strong>2006</strong></p>
     				<p>Nissan</p>
