data is being written to the DOM onload

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
     	<div class="spacer"></div>
     	<div id="output-frame">
-    		<div class="row">
+    		<!-- <div class="row">
     			<div class="col-sm-3 card selected">
     				<h2></h2>
     				<p><strong>2006</strong></p>
@@ -83,7 +83,7 @@
     					This is an immaculate 2006 Nissan Rogue with only 25000 miles on it. Leather seats, power everything.
     				</p>
     			</div>
-    		</div>
+    		</div> -->
     	</div>
     </div><!-- /.container -->
 
