ajax request working, data printing to the page

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     					This is an immaculate 2006 Nissan Rogue with only 25000 miles on it. Leather seats, power everything.
     				</p>
     			</div>
-    		</div> -->
-    	</div>
+    		</div>
+    	</div> -->
     </div><!-- /.container -->
 
 
@@ -94,7 +94,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/carlot.js"></script>
+	<script type="text/javascript" src="js/editor.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/carlot.js"></script>
+	
+
   </body>
 </html>
