edit description functions are working

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -42,49 +40,9 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
     <div class="container">
     	<div class="spacer"></div>
-    	<div id="output-frame">
-    		<!-- <div class="row">
-    			<div class="col-sm-3 card selected">
-    				<h2></h2>
-    				<p><strong>2006</strong></p>
-    				<p>Nissan</p>
-    				<p>Rogue</p>
-    				<p class="Description">
-    					This is an immaculate 2006 Nissan Rogue with only 25000 miles on it. Leather seats, power everything.
-    				</p>
-    			</div>
-    			<div class="col-sm-3 card">
-    				<h2></h2>
-    				<p><strong>2006</strong></p>
-    				<p>Nissan</p>
-    				<p>Rogue</p>
-    				<p class="Description">
-    					This is an immaculate 2006 Nissan Rogue with only 25000 miles on it. Leather seats, power everything.
-    				</p>
-    			</div>
-    			<div class="col-sm-3 card">
-    				<h2></h2>
-    				<p><strong>2006</strong></p>
-    				<p>Nissan</p>
-    				<p>Rogue</p>
-    				<p class="Description">
-    					This is an immaculate 2006 Nissan Rogue with only 25000 miles on it. Leather seats, power everything.
-    				</p>
-    			</div>
-    			<div class="col-sm-3 card">
-    				<h2></h2>
-    				<p><strong>2006</strong></p>
-    				<p>Nissan</p>
-    				<p>Rogue</p>
-    				<p class="Description">
-    					This is an immaculate 2006 Nissan Rogue with only 25000 miles on it. Leather seats, power everything.
-    				</p>
-    			</div>
-    		</div>
-    	</div> -->
+        	<div id="output-frame"></div>
     </div><!-- /.container -->
 
 
@@ -97,7 +55,5 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/carlot.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
-	
-
   </body>
 </html>
